--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 ChallengeResponse
 =================
 
-A challenge response plugin for Rails. This is to be used instead of a Captcha. Questions like "What does 1 + 2 equal?", "What letter comes before W?", "What does 7 - 3 equal?" will be asked and tested.
+A challenge response plugin for Rails. This is to be used instead of a CAPTCHA. Questions like "What does 1 + 2 equal?", "What letter comes before W?", "What does 7 - 3 equal?" will be asked and tested.
 
 
 Copyright (c) 2009 Dane Harrigan of Six Studios, released under the MIT license
